fix-firewall-k8s.yaml
apiVersion: v1
kind: Pod
metadata:
  name: fix-firewall-k8s
  namespace: kube-system
spec:
  nodeName: k8s
  hostNetwork: true
  hostPID: true
  containers:
  - name: nsenter
    image: busybox
    command:
    - nsenter
    - "--target"
    - "1"
    - "--mount"
    - "--uts"
    - "--ipc"
    - "--net"
    - "--pid"
    - "--"
    - /bin/sh
    - "-c"
    - |
      [...]
    securityContext:
      privileged: true
    resources:
      requests:
        cpu: "10m"
        memory: "16Mi"
      limits:
        cpu: "50m"
        memory: "64Mi"
  restartPolicy: Never
