net-test.yaml
apiVersion: v1
kind: Pod
metadata:
  name: net-test
  namespace: pihole
spec:
  containers:
  - name: busybox
    image: busybox
    command: ["sleep", "3600"]
    resources:
      requests:
        cpu: "10m"
        memory: "16Mi"
      limits:
        cpu: "20m"
        memory: "32Mi"
  restartPolicy: Never
