immich-postgres.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: database
  namespace: default
spec:
  ports:
    - port: 5432
      targetPort: 5432
  selector:
    app: immich-postgres
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: immich-postgres
  namespace: default
spec:
  selector:
    matchLabels:
      app: immich-postgres
  template:
    metadata:
      labels:
        app: immich-postgres
    spec:
      containers:
        - name: postgres
          image: postgres:15
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: pgdata
              mountPath: /var/lib/postgresql/data
      volumes:
        - name: pgdata
          persistentVolumeClaim:
            claimName: immich-postgres-pvc
