immich-redis.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: immich-valkey
  namespace: default
spec:
  ports:
    - port: 6379
      targetPort: 6379
  selector:
    app: immich-valkey
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: immich-valkey
  namespace: default
spec:
  selector:
    matchLabels:
      app: immich-valkey
  template:
    metadata:
      labels:
        app: immich-valkey
    spec:
      containers:
        - name: redis
          image: redis:7-alpine
          ports:
            - containerPort: 6379
